--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,22 +1,26 @@
 {
-    "/js/altijdsex-nl/app.js": "/js/altijdsex-nl/app.js?id=3bbaa06a7537ddf4ab51",
-    "/css/altijdsex-nl/app.css": "/css/altijdsex-nl/app.css?id=cbc94b29cb44fb6913eb",
-    "/css/liefdesdate-nl/app.css": "/css/liefdesdate-nl/app.css?id=27e1aed8ca73d1c32320",
+    "/js/altijdsex-nl/app.js": "/js/altijdsex-nl/app.js?id=14d193ec15390958df96",
+    "/css/altijdsex-nl/app.css": "/css/altijdsex-nl/app.css?id=0d92c258233420a66415",
+    "/css/liefdesdate-nl/app.css": "/css/liefdesdate-nl/app.css?id=f69f6d1eb39c4bc58343",
+    "/css/altijdsex-nl/credits.css": "/css/altijdsex-nl/credits.css?id=e85cda6b87f14754e01b",
+    "/css/liefdesdate-nl/credits.css": "/css/liefdesdate-nl/credits.css?id=88199ec6bab5f10e4bed",
     "/admin/css/custom.css": "/admin/css/custom.css?id=e46e1be12e43f2aa95d8",
-    "/js/altijdsex-nl/app.js.map": "/js/altijdsex-nl/app.js.map?id=4c56de3976691d3fe354",
-    "/css/altijdsex-nl/app.css.map": "/css/altijdsex-nl/app.css.map?id=749af00c5bf7e2195566",
-    "/css/liefdesdate-nl/app.css.map": "/css/liefdesdate-nl/app.css.map?id=e8e1b41cde7da9151d3b",
+    "/js/altijdsex-nl/app.js.map": "/js/altijdsex-nl/app.js.map?id=732fa80ab1a951a88610",
+    "/css/altijdsex-nl/app.css.map": "/css/altijdsex-nl/app.css.map?id=6d427bad0cfe34d36eb7",
+    "/css/liefdesdate-nl/app.css.map": "/css/liefdesdate-nl/app.css.map?id=2c7c74633e3a1582f38f",
+    "/css/altijdsex-nl/credits.css.map": "/css/altijdsex-nl/credits.css.map?id=2b362889da340b76cdcf",
+    "/css/liefdesdate-nl/credits.css.map": "/css/liefdesdate-nl/credits.css.map?id=852e3983d8924f03d95c",
     "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=f840793b8c64c3367dc5",
     "/js/liefdesdate-nl/app.js": "/js/liefdesdate-nl/app.js?id=e3efa7c0b0bcf011d4db",
-    "/js/liefdesdate-nl/app.js.map": "/js/liefdesdate-nl/app.js.map?id=352b8877c68ea588cf83",
+    "/js/liefdesdate-nl/app.js.map": "/js/liefdesdate-nl/app.js.map?id=8318bfded0ae5d206f7f",
     "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=0bac159b37f8d21ad680",
-    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=7e00b05b8e8a692c037f",
+    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=a88514cc33e0a21fc529",
     "/js/lp.js": "/js/lp.js?id=59ef54edadca7ec11409",
-    "/js/lp.js.map": "/js/lp.js.map?id=a1c53da43f18ecc2685f",
+    "/js/lp.js.map": "/js/lp.js.map?id=35fb647706db60bc73f6",
     "/js/lps/ads/lp2.js": "/js/lps/ads/lp2.js?id=013a3ba45b7b99831b73",
-    "/js/lps/ads/lp2.js.map": "/js/lps/ads/lp2.js.map?id=5abbb8cccddf0465a299",
+    "/js/lps/ads/lp2.js.map": "/js/lps/ads/lp2.js.map?id=6ffefdfeb8a5c21960a9",
     "/js/lps/ads/lp1.js": "/js/lps/ads/lp1.js?id=b5484d297dd5d64df37d",
-    "/js/lps/ads/lp1.js.map": "/js/lps/ads/lp1.js.map?id=913a7b5258726005c917",
+    "/js/lps/ads/lp1.js.map": "/js/lps/ads/lp1.js.map?id=3e267f905b6cc1b579b4",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=45a84309d4c66993673d",
     "/admin/js/plugins-force.js": "/admin/js/plugins-force.js?id=e8da6036ef883032d432"
 }
