--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
         "aws/aws-sdk-php": "~3.0",
-        "laraveldaily/laravel-invoices": "^1.3"
+        "laraveldaily/laravel-invoices": "^1.3",
+        "laravel/sanctum": "^2.6"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
