--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "laravel/ui": "^3.0",
         "aws/aws-sdk-php": "~3.0",
         "laraveldaily/laravel-invoices": "^1.3",
-        "laravel/sanctum": "^2.6"
+        "laravel/sanctum": "^2.6",
+        "fruitcake/laravel-cors": "^2.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
