--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,22 +1,26 @@
 {
-    "/js/altijdsex-nl/app.js": "/js/altijdsex-nl/app.js?id=411da7a8b95871410b12",
+    "/js/altijdsex-nl/app.js": "/js/altijdsex-nl/app.js?id=3f2f510e6cd6a8216965",
     "/css/altijdsex-nl/app.css": "/css/altijdsex-nl/app.css?id=fdf81d37da62f5706495",
     "/css/liefdesdate-nl/app.css": "/css/liefdesdate-nl/app.css?id=98ce4b7fb06a437ed4e2",
+    "/css/sweetalk-nl/app.css": "/css/sweetalk-nl/app.css?id=98ce4b7fb06a437ed4e2",
     "/admin/css/custom.css": "/admin/css/custom.css?id=e5b1ef28dc692a9fe17b",
-    "/js/altijdsex-nl/app.js.map": "/js/altijdsex-nl/app.js.map?id=7f4db2c9dd16b3632a52",
+    "/js/altijdsex-nl/app.js.map": "/js/altijdsex-nl/app.js.map?id=81f8cc1950a95994ab1b",
     "/css/altijdsex-nl/app.css.map": "/css/altijdsex-nl/app.css.map?id=7a321b0442712acbd546",
     "/css/liefdesdate-nl/app.css.map": "/css/liefdesdate-nl/app.css.map?id=43f97138e90ce354f051",
+    "/css/sweetalk-nl/app.css.map": "/css/sweetalk-nl/app.css.map?id=5fbcabe1e726434151a7",
     "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=c26ac62406f6a8ff1023",
-    "/js/liefdesdate-nl/app.js": "/js/liefdesdate-nl/app.js?id=25f920a4794780ba4454",
-    "/js/liefdesdate-nl/app.js.map": "/js/liefdesdate-nl/app.js.map?id=34dfcc554c71cd848cde",
-    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=d4a33427b8028c291b5e",
-    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=249dfb59e8cb81083235",
-    "/js/lp.js": "/js/lp.js?id=59ef54edadca7ec11409",
-    "/js/lp.js.map": "/js/lp.js.map?id=d209756764251e6bcab0",
-    "/js/lps/ads/lp2.js": "/js/lps/ads/lp2.js?id=013a3ba45b7b99831b73",
-    "/js/lps/ads/lp2.js.map": "/js/lps/ads/lp2.js.map?id=d55c7a894deefe2b1ad6",
-    "/js/lps/ads/lp1.js": "/js/lps/ads/lp1.js?id=b5484d297dd5d64df37d",
-    "/js/lps/ads/lp1.js.map": "/js/lps/ads/lp1.js.map?id=4a926d99561162e2355e",
+    "/js/sweetalk-nl/app.js": "/js/sweetalk-nl/app.js?id=3e19d0dc9cbd511a1fc2",
+    "/js/sweetalk-nl/app.js.map": "/js/sweetalk-nl/app.js.map?id=6f7588d15792e0656a92",
+    "/js/liefdesdate-nl/app.js": "/js/liefdesdate-nl/app.js?id=30fd803f07df3d2b1caf",
+    "/js/liefdesdate-nl/app.js.map": "/js/liefdesdate-nl/app.js.map?id=08e6a8ca7679cbc0210d",
+    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=b52aca18cd1e1c023127",
+    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=9fc71ea7c4531b24b86b",
+    "/js/lp.js": "/js/lp.js?id=60d6706cde2532452253",
+    "/js/lp.js.map": "/js/lp.js.map?id=1553ea5e63e2fd639ea9",
+    "/js/lps/ads/lp2.js": "/js/lps/ads/lp2.js?id=3f2ca5f48977f26c6a00",
+    "/js/lps/ads/lp2.js.map": "/js/lps/ads/lp2.js.map?id=aaa1baf27b0c159bee17",
+    "/js/lps/ads/lp1.js": "/js/lps/ads/lp1.js?id=e6e909b12934440b1655",
+    "/js/lps/ads/lp1.js.map": "/js/lps/ads/lp1.js.map?id=3e8b7070229947097f26",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=45a84309d4c66993673d",
     "/admin/js/plugins-force.js": "/admin/js/plugins-force.js?id=e8da6036ef883032d432"
 }
