--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,10 @@ before_script:
 stages:
   - deploy_staging_altijdsex_nl
   - deploy_staging_liefdesdate_nl
+  - deploy_staging_sweetalk_nl
   - deploy_production_altijdsex_nl
   - deploy_production_liefdesdate_nl
+  - deploy_production_sweetalk_nl
 
 deploy_staging_altijdsex_nl:
   stage: deploy_staging_altijdsex_nl
@@ -55,6 +57,26 @@ deploy_staging_liefdesdate_nl:
   only:
     - staging
 
+deploy_staging_sweetalk_nl:
+  stage: deploy_staging_sweetalk_nl
+  environment:
+    name: staging
+  script:
+    - ssh opalampo@142.93.141.215 "cd /var/www/dating &&
+      git fetch &&
+      git checkout staging &&
+      git pull origin staging &&
+      composer install --no-dev --no-interaction --prefer-dist --optimize-autoloader &&
+      php artisan migrate --force &&
+      php artisan config:cache &&
+      php artisan route:cache &&
+      php artisan view:cache &&
+      php artisan optimize &&
+      php artisan queue:restart &&
+      exit"
+  only:
+    - staging
+
 deploy_production_altijdsex_nl:
   stage: deploy_production_altijdsex_nl
   environment:
@@ -81,6 +103,26 @@ deploy_production_liefdesdate_nl:
     name: production
   script:
     - ssh opalampo@188.166.93.182 "cd /var/www/dating &&
+      git fetch &&
+      git checkout master &&
+      git pull origin master &&
+      composer install --no-dev --no-interaction --prefer-dist --optimize-autoloader &&
+      php artisan migrate --force &&
+      php artisan config:cache &&
+      php artisan route:cache &&
+      php artisan view:cache &&
+      php artisan optimize &&
+      php artisan queue:restart &&
+      exit"
+  only:
+    - master
+
+deploy_production_sweetalk_nl:
+  stage: deploy_production_sweetalk_nl
+  environment:
+    name: production
+  script:
+    - ssh opalampo@188.166.3.163 "cd /var/www/dating &&
       git fetch &&
       git checkout master &&
       git pull origin master &&
