--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,26 +1,32 @@
 {
-    "/js/altijdsex-nl/app.js": "/js/altijdsex-nl/app.js?id=b9cd74f6a69d209477be",
+    "/js/altijdsex-nl/app.js": "/js/altijdsex-nl/app.js?id=527acb826760963bd755",
     "/css/altijdsex-nl/app.css": "/css/altijdsex-nl/app.css?id=415e29d002ba76e09956",
     "/css/liefdesdate-nl/app.css": "/css/liefdesdate-nl/app.css?id=cabc09bb645455b4202a",
     "/css/sweetalk-nl/app.css": "/css/sweetalk-nl/app.css?id=623b082c083e79bf64f1",
+    "/css/altijdsex-nl/adsLps.css": "/css/altijdsex-nl/adsLps.css?id=c3e5b9ecdcb7a985be8a",
+    "/css/liefdesdate-nl/adsLps.css": "/css/liefdesdate-nl/adsLps.css?id=46b02a46f1fa859edc3a",
+    "/css/sweetalk-nl/adsLps.css": "/css/sweetalk-nl/adsLps.css?id=46b02a46f1fa859edc3a",
     "/admin/css/custom.css": "/admin/css/custom.css?id=e5b1ef28dc692a9fe17b",
-    "/js/altijdsex-nl/app.js.map": "/js/altijdsex-nl/app.js.map?id=a52e3d17bf04141ddaa2",
+    "/js/altijdsex-nl/app.js.map": "/js/altijdsex-nl/app.js.map?id=5aaaeb6af60027b970c8",
     "/css/altijdsex-nl/app.css.map": "/css/altijdsex-nl/app.css.map?id=0100125df70b92f281bd",
     "/css/liefdesdate-nl/app.css.map": "/css/liefdesdate-nl/app.css.map?id=36b440567b59dd163572",
-    "/css/sweetalk-nl/app.css.map": "/css/sweetalk-nl/app.css.map?id=7f2b1361f03521f09f0c",
+    "/css/sweetalk-nl/app.css.map": "/css/sweetalk-nl/app.css.map?id=ab1ee10359c353c776dd",
+    "/css/altijdsex-nl/adsLps.css.map": "/css/altijdsex-nl/adsLps.css.map?id=d3f772f182d286c5441f",
+    "/css/liefdesdate-nl/adsLps.css.map": "/css/liefdesdate-nl/adsLps.css.map?id=e8e9e499946a6c5d9e6a",
+    "/css/sweetalk-nl/adsLps.css.map": "/css/sweetalk-nl/adsLps.css.map?id=2eb9c0eefa761d0d1f2b",
     "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=c26ac62406f6a8ff1023",
     "/js/sweetalk-nl/app.js": "/js/sweetalk-nl/app.js?id=54cc0e2db5e45c28d81b",
-    "/js/sweetalk-nl/app.js.map": "/js/sweetalk-nl/app.js.map?id=0860a635148d48f8e3c6",
+    "/js/sweetalk-nl/app.js.map": "/js/sweetalk-nl/app.js.map?id=2b08a7dcdb48c919f1e4",
     "/js/liefdesdate-nl/app.js": "/js/liefdesdate-nl/app.js?id=3856c1776f907e6d16e9",
-    "/js/liefdesdate-nl/app.js.map": "/js/liefdesdate-nl/app.js.map?id=2a29c7789c6c4ddac2c7",
+    "/js/liefdesdate-nl/app.js.map": "/js/liefdesdate-nl/app.js.map?id=f39cfb0030e6efba23cd",
     "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=b52aca18cd1e1c023127",
-    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=28b1538d9ed6daf0e4d9",
+    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=3ad732c8eb14ea63986f",
     "/js/lp.js": "/js/lp.js?id=60d6706cde2532452253",
-    "/js/lp.js.map": "/js/lp.js.map?id=54a41f03390734549c7b",
+    "/js/lp.js.map": "/js/lp.js.map?id=e0126624afdf590eec14",
     "/js/lps/ads/lp2.js": "/js/lps/ads/lp2.js?id=3f2ca5f48977f26c6a00",
-    "/js/lps/ads/lp2.js.map": "/js/lps/ads/lp2.js.map?id=36462985a04bc8edfecb",
-    "/js/lps/ads/lp1.js": "/js/lps/ads/lp1.js?id=e6e909b12934440b1655",
-    "/js/lps/ads/lp1.js.map": "/js/lps/ads/lp1.js.map?id=da7f3bd43c19f04ecc12",
+    "/js/lps/ads/lp2.js.map": "/js/lps/ads/lp2.js.map?id=38a45b6ae817be5940ba",
+    "/js/lps/ads/lp1.js": "/js/lps/ads/lp1.js?id=010e13c52ce94f392a5b",
+    "/js/lps/ads/lp1.js.map": "/js/lps/ads/lp1.js.map?id=7b01007bf90afcf8ce73",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=45a84309d4c66993673d",
     "/admin/js/plugins-force.js": "/admin/js/plugins-force.js?id=e8da6036ef883032d432"
 }
