--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "aws/aws-sdk-php": "~3.0",
         "laraveldaily/laravel-invoices": "^1.3",
         "laravel/sanctum": "^2.6",
-        "fruitcake/laravel-cors": "^2.0"
+        "fruitcake/laravel-cors": "^2.0",
+        "laravel/slack-notification-channel": "^2.3.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
