--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,18 +1,32 @@
 {
-    "/js/altijdsex-nl/app.js": "/js/altijdsex-nl/app.js?id=75108454abe4cf9f7c53",
-    "/css/altijdsex-nl/app.css": "/css/altijdsex-nl/app.css?id=cda6aab7b24d0965ae16",
-    "/css/liefdesdate-nl/app.css": "/css/liefdesdate-nl/app.css?id=ed541baacdd7f3117480",
-    "/css/sweetalk-nl/app.css": "/css/sweetalk-nl/app.css?id=7a9b3f26d923795c5813",
-    "/css/altijdsex-nl/adsLps.css": "/css/altijdsex-nl/adsLps.css?id=7f54cc7d991cdf3c9aa9",
-    "/css/liefdesdate-nl/adsLps.css": "/css/liefdesdate-nl/adsLps.css?id=4c3bd919eaed2f8c7d93",
-    "/css/sweetalk-nl/adsLps.css": "/css/sweetalk-nl/adsLps.css?id=b613eed0f5ee86297bd3",
-    "/admin/css/custom.css": "/admin/css/custom.css?id=f5f7cb9df7f0ef300ca9",
-    "/js/sweetalk-nl/app.js": "/js/sweetalk-nl/app.js?id=08b120517b70ba6faaa7",
-    "/js/liefdesdate-nl/app.js": "/js/liefdesdate-nl/app.js?id=daa65dfbe06a3b236292",
-    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=aa7985a39d86120ea94e",
-    "/js/lp.js": "/js/lp.js?id=5939d2dd5bf7320e2806",
-    "/js/lps/ads/lp2.js": "/js/lps/ads/lp2.js?id=14aa39480f300bb7cb26",
-    "/js/lps/ads/lp1.js": "/js/lps/ads/lp1.js?id=bf01ca173dc4d1cf736f",
+    "/js/altijdsex-nl/app.js": "/js/altijdsex-nl/app.js?id=80a7c3b7a22d548ac9ab",
+    "/css/altijdsex-nl/app.css": "/css/altijdsex-nl/app.css?id=db24c62099d7a0a806d4",
+    "/css/liefdesdate-nl/app.css": "/css/liefdesdate-nl/app.css?id=2700931ab12dd7503003",
+    "/css/sweetalk-nl/app.css": "/css/sweetalk-nl/app.css?id=2c53c15b9ff60ebbe432",
+    "/css/altijdsex-nl/adsLps.css": "/css/altijdsex-nl/adsLps.css?id=9a09ea6315c86d707d40",
+    "/css/liefdesdate-nl/adsLps.css": "/css/liefdesdate-nl/adsLps.css?id=4c397abbe1ff4985730b",
+    "/css/sweetalk-nl/adsLps.css": "/css/sweetalk-nl/adsLps.css?id=ef2264d6b7b4819a400f",
+    "/admin/css/custom.css": "/admin/css/custom.css?id=e5b1ef28dc692a9fe17b",
+    "/js/altijdsex-nl/app.js.map": "/js/altijdsex-nl/app.js.map?id=6f2a5754764e14ab6f59",
+    "/css/altijdsex-nl/app.css.map": "/css/altijdsex-nl/app.css.map?id=d21adafe9dfd4d1448eb",
+    "/css/liefdesdate-nl/app.css.map": "/css/liefdesdate-nl/app.css.map?id=75a4baa6cf8b1257ed1e",
+    "/css/sweetalk-nl/app.css.map": "/css/sweetalk-nl/app.css.map?id=e33b516288146ce87b66",
+    "/css/altijdsex-nl/adsLps.css.map": "/css/altijdsex-nl/adsLps.css.map?id=3dcf5a9fcae1afa852a8",
+    "/css/liefdesdate-nl/adsLps.css.map": "/css/liefdesdate-nl/adsLps.css.map?id=f03c5bda7c9b9c13795a",
+    "/css/sweetalk-nl/adsLps.css.map": "/css/sweetalk-nl/adsLps.css.map?id=b45c298de8a0b09fa93a",
+    "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=3a09b0fe21bb1fb81dd6",
+    "/js/sweetalk-nl/app.js": "/js/sweetalk-nl/app.js?id=125c37435ed5528d4be9",
+    "/js/sweetalk-nl/app.js.map": "/js/sweetalk-nl/app.js.map?id=7f87575dcdf78b3737fd",
+    "/js/liefdesdate-nl/app.js": "/js/liefdesdate-nl/app.js?id=7126f5c3b83ddab7447b",
+    "/js/liefdesdate-nl/app.js.map": "/js/liefdesdate-nl/app.js.map?id=74343bc4e747984590d5",
+    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=b52aca18cd1e1c023127",
+    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=2c0ebc7764417e6d1fa1",
+    "/js/lp.js": "/js/lp.js?id=60d6706cde2532452253",
+    "/js/lp.js.map": "/js/lp.js.map?id=8905b626d84abf6a6c0d",
+    "/js/lps/ads/lp2.js": "/js/lps/ads/lp2.js?id=3f2ca5f48977f26c6a00",
+    "/js/lps/ads/lp2.js.map": "/js/lps/ads/lp2.js.map?id=76fa503240b0e122f800",
+    "/js/lps/ads/lp1.js": "/js/lps/ads/lp1.js?id=b5dd08122307a9a51b76",
+    "/js/lps/ads/lp1.js.map": "/js/lps/ads/lp1.js.map?id=29de961f5698d3b130cc",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=45a84309d4c66993673d",
     "/admin/js/plugins-force.js": "/admin/js/plugins-force.js?id=e8da6036ef883032d432"
 }
