--- a/.env.example
+++ b/.env.example
@@ -14,10 +14,10 @@ DB_USERNAME=username
 DB_PASSWORD=password
 DB_TEST_DRIVER=mysql
 
-S3_KEY=AKIAJWTIJZI6JKGGHQDA
-S3_SECRET=eZpwZrXmpRLVvKuUxuMyR/fhPXkG2mPFZOz1batc
-S3_REGION=eu-west-2
-S3_BUCKET=local.orestis.altijdsex
+S3_KEY=
+S3_SECRET=
+S3_REGION=
+S3_BUCKET=
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
