--- a/public/img/favicons/manifest.json
+++ b/public/img/favicons/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Altijdsex",
+    "name": "Datevrij",
     "icons": [
         {
             "src": "/android-chrome-192x192.png?v=kPg6X4KxP8",
