--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,17 +1,17 @@
 {
-    "/js/altijdsex-nl/app.js": "/js/altijdsex-nl/app.js?id=80a7c3b7a22d548ac9ab",
-    "/css/altijdsex-nl/app.css": "/css/altijdsex-nl/app.css?id=8dc06239d21dcffa82fa",
+    "/js/datevrij-nl/app.js": "/js/datevrij-nl/app.js?id=80a7c3b7a22d548ac9ab",
+    "/css/datevrij-nl/app.css": "/css/datevrij-nl/app.css?id=8dc06239d21dcffa82fa",
     "/css/liefdesdate-nl/app.css": "/css/liefdesdate-nl/app.css?id=d1164a45a161bc1b14f4",
     "/css/sweetalk-nl/app.css": "/css/sweetalk-nl/app.css?id=b9663fc48d62601152be",
-    "/css/altijdsex-nl/adsLps.css": "/css/altijdsex-nl/adsLps.css?id=9a09ea6315c86d707d40",
+    "/css/datevrij-nl/adsLps.css": "/css/datevrij-nl/adsLps.css?id=9a09ea6315c86d707d40",
     "/css/liefdesdate-nl/adsLps.css": "/css/liefdesdate-nl/adsLps.css?id=eca4b53a79777f570f79",
     "/css/sweetalk-nl/adsLps.css": "/css/sweetalk-nl/adsLps.css?id=ba991f29309a84a2359b",
     "/admin/css/custom.css": "/admin/css/custom.css?id=e5b1ef28dc692a9fe17b",
-    "/js/altijdsex-nl/app.js.map": "/js/altijdsex-nl/app.js.map?id=8ba5c595b6b5f616ad87",
-    "/css/altijdsex-nl/app.css.map": "/css/altijdsex-nl/app.css.map?id=a2747c72f9f8309ff442",
+    "/js/datevrij-nl/app.js.map": "/js/datevrij-nl/app.js.map?id=8ba5c595b6b5f616ad87",
+    "/css/datevrij-nl/app.css.map": "/css/datevrij-nl/app.css.map?id=a2747c72f9f8309ff442",
     "/css/liefdesdate-nl/app.css.map": "/css/liefdesdate-nl/app.css.map?id=e08361c975b883da38fa",
     "/css/sweetalk-nl/app.css.map": "/css/sweetalk-nl/app.css.map?id=bd059419b082b73c2f0c",
-    "/css/altijdsex-nl/adsLps.css.map": "/css/altijdsex-nl/adsLps.css.map?id=3dcf5a9fcae1afa852a8",
+    "/css/datevrij-nl/adsLps.css.map": "/css/datevrij-nl/adsLps.css.map?id=3dcf5a9fcae1afa852a8",
     "/css/liefdesdate-nl/adsLps.css.map": "/css/liefdesdate-nl/adsLps.css.map?id=86ce9e47d06f64ebfa21",
     "/css/sweetalk-nl/adsLps.css.map": "/css/sweetalk-nl/adsLps.css.map?id=617a46673f0f2051efde",
     "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=3a09b0fe21bb1fb81dd6",
