--- a/.env
+++ b/.env
@@ -7,9 +7,9 @@ APP_URL=http://localhost
 LOG_CHANNEL=single
 
 DB_CONNECTION=mysql
-DB_HOST=dating-mysql
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=database
+DB_DATABASE=mysql
 DB_USERNAME=root
 DB_PASSWORD=
 DB_TEST_DRIVER=mysql
@@ -47,4 +47,4 @@ TARGETPAY_KLANTCODE=code
 TARGETPAY_TEST=true
 TARGETPAY_DEBUG=true
 
-GOOGLE_MAPS_API_KEY=AIzaSyCTJTFJhkdxBp-9b1gVjf_cwV67ie-153Q
+GOOGLE_MAPS_API_KEY=
