--- a/project.git/config
+++ b/project.git/config
@@ -4,3 +4,6 @@
 	bare = true
 	symlinks = false
 	ignorecase = true
+[remote "production"]
+	url = duijmsteven@gitlab.com:project.git
+	fetch = +refs/heads/*:refs/remotes/production/*
